fixed padding and margin

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>Lorem web and more </h1>
             <h2><em>Build your lalalaalal...</em></h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi temporibus reiciendis laudantium, veniam iusto distinctio.</p>
-            <button>Sign Up</button>
+            <button class="button">Sign Up</button>
         </div>
         <div>
             <img src="https://cdn.pixabay.com/photo/2016/12/28/09/36/web-1935737_1280.png" alt="" class="big-img">
@@ -34,23 +34,33 @@
     <div class="information">
         <h2>Our services:</h2>
         <container class="services">
-            <div><img src="https://cdn.pixabay.com/photo/2018/05/18/15/30/web-design-3411373_1280.jpg" alt="" class="ser-img">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat impedit nemo odit,</p></div>
-            <div><img src="https://cdn.pixabay.com/photo/2014/08/14/10/38/software-417880_1280.jpg" alt="" class="ser-img">
-            <p> similique autem dicta minus consectetur fugit quaerat ipsum,</p></div>
-            <div><img src="https://cdn.pixabay.com/photo/2015/04/14/23/17/it-business-722950_960_720.png" alt="" class="ser-img">
-            <p>amet officiis asperiores error,</p></div>
-            <div><img src="https://cdn.pixabay.com/photo/2019/01/31/20/52/web-3967926_1280.jpg" alt="" class="ser-img">
-            <p>quasi adipisci eveniet eius neque voluptates.</p></div>
+            <div class="serve">
+                <img src="https://cdn.pixabay.com/photo/2018/05/18/15/30/web-design-3411373_1280.jpg" alt="" class="ser-img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat impedit nemo odit,</p>
+            </div>
+            <div class="serve">
+                <img src="https://cdn.pixabay.com/photo/2014/08/14/10/38/software-417880_1280.jpg" alt="" class="ser-img">
+                <p> similique autem dicta minus consectetur fugit quaerat ipsum,</p>
+            </div>
+            <div class="serve">
+                <img src="https://cdn.pixabay.com/photo/2015/04/14/23/17/it-business-722950_960_720.png" alt="" class="ser-img">
+            <p>amet officiis asperiores error,</p>
+            </div>
+            <div class="serve">
+                <img src="https://cdn.pixabay.com/photo/2019/01/31/20/52/web-3967926_1280.jpg" alt="" class="ser-img">
+                <p>quasi adipisci eveniet eius neque voluptates.</p>
+            </div>
         </container>
     </div>
     <div class="inspiration">
-        <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id, vero. At tempore repellendus architecto incidunt vitae? Id quas praesentium maiores nisi perspiciatis eos quae nulla asperiores. Ullam omnis accusantium nostrum!</h2>
-        <footer class="signet">doda susie</footer>
+        <h2><em>"Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id, vero. At tempore repellendus architecto incidunt vitae? Id quas praesentium maiores nisi perspiciatis eos quae nulla asperiores. Ullam omnis accusantium nostrum!"</em></h2>
+        <footer class="signature">- doda susie - </footer>
     </div>
     <div class="signUp">
+        <div id="sign-box">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione incidunt praesentium sequi, dolor corporis dicta sapiente non nobis ab quas cum ipsa possimus molestias aspernatur illum odio itaque impedit explicabo.</p>
-        <button>Sign up</button>
+        <button class="button">Sign up</button>
+        </div>
     </div>
     <div class="footer">
     <footer>sheker hahen @ hevel hyofi</footer>
